parse nested classes

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "react-scoped-styles",
-    "version": "0.0.2",
+    "version": "0.1.0",
     "description": "Scoped styles for React components",
     "main": "index.js",
     "scripts": {
@@ -20,6 +20,8 @@
     },
     "devDependencies": {
         "@types/node": "^10.12.21",
+        "@types/webpack": "^4.4.24",
         "typescript": "^3.3.1"
-    }
+    },
+    "dependencies": {}
 }
